<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Analytics"
    tools:showIn="@layout/activity_analytics">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textViewSpin"
        android:layout_toRightOf="@+id/textViewSpin"
        android:entries="@array/binArray" />

    <TextView
        android:id="@+id/textViewSpin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2sp"
        android:text="@string/spinner_text" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:onClick="calculateTotalTimeSpent"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/analyticsTotalTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCalculate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:visibility="invisible"
        android:text="@string/analyticsTotalTimes" />


</RelativeLayout>